1. Fixed A Bug in Navbar That caused Signin button to wrap in.
2. Added Cart Page by Teesha

3. Explicitly Defined Background Color for Footer

--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -2,6 +2,7 @@
 * {
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container-fluid {
@@ -129,6 +130,7 @@ header{
 
 .dressingity_footer {
     border-top: solid 1px #e3e7e9;
+    background-color: #ededed;
 }
 
 .dressingity_footer .widget_wrapper {
